--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     margin-top: 6px;
     width: 149px;
     height: 37px;
+    border-radius: 15px
   }
   .child_div_2 {
       float: right;
@@ -19,6 +20,7 @@
       margin-top: -39px;
       width: 149px;
       height: 37px;
+      border-radius: 15px;
   }
   img {
       float: left;
