--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
       height: 37px;
       border-radius: 5px;
   }
+  body {
+      font-family: Gill Sans;
+  }
   img {
       float: left;
   }
