font edit debug

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
       border-radius: 5px;
   }
   body {
-      font-family: Gill Sans;
+      font-family: 'Gill Sans';
   }
   img {
       float: left;
