--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@
   div {
       border-radius: 5px;
   }
+  li {
+    border-radius: 5px;
+}
   a div:hover {
       background-color: #eaeaea
   }
